--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=vibbid.upload
+MYAPP_UPLOAD_KEY_ALIAS=vibbid.key
+MYAPP_UPLOAD_STORE_PASSWORD=rnd24635!
+MYAPP_UPLOAD_KEY_PASSWORD=rnd24635!
