--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,14 @@ require Pod::Executable.execute_command('node', ['-p',
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
+
+project 'Vibbid', {
+  'DevelopmentDebug' => :debug,
+  'ProductionDebug' => :debug,
+  'DevelopmentRelease' => :release,
+  'ProductionRelease' => :release
+}
+
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
 #
