--- a/ios/Vibbid.xcodeproj/xcshareddata/xcschemes/VibbidDev.xcscheme
+++ b/ios/Vibbid.xcodeproj/xcshareddata/xcschemes/VibbidDev.xcscheme
@@ -32,14 +32,14 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "ProductionDebug"
+      buildConfiguration = "DevelopmentDebug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "ProductionDebug"
+      buildConfiguration = "DevelopmentDebug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -60,7 +60,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "ProductionDebug"
+      buildConfiguration = "DevelopmentRelease"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -77,10 +77,10 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "ProductionRelease">
+      buildConfiguration = "DevelopmentRelease">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "ProductionRelease"
+      buildConfiguration = "DevelopmentRelease"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
