--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,17 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+project.ext.envConfigFiles = [
+        developmentdebug: ".env",
+        developmentrelease: ".env",
+        productiondebug: ".env.production",
+        productionrelease: ".env.production"
+]
+
+
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -82,6 +93,12 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    productFlavors{
+        production {}
+        development {
+            applicationIdSuffix ".dev"
+        }
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -93,6 +110,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            matchingFallbacks = ['debug', 'release']
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
