--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,7 +42,8 @@ target 'Vibbid' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    :hermes_enabled => true,
+#    :flipper_configuration => FlipperConfiguration.enabled(['DevelopmentDebug','ProductionDebug','DevelopmentRelease','ProductionRelease']),
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -51,9 +52,24 @@ target 'Vibbid' do
     inherit! :complete
     # Pods for testing
   end
+  
+  ENVFILES = {
+    'Debug' => '$(PODS_ROOT)/../../.env.development',
+    'Release' => '$(PODS_ROOT)/../../.env.production',
+  }
+  
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+    
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        if target.name == 'react-native-config'
+          config.build_settings['ENVFILE'] = ENVFILES[config.name]
+        end
+      end
+    end
+    
     react_native_post_install(
       installer,
       config[:reactNativePath],
