--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android Vibbid",
-    "ios": "react-native run-ios --scheme Vibbid --simulator iPhone 5",
+    "ios": "react-native run-ios --scheme Vibbid --simulator iPhone 15",
+    "ios:dev": "react-native run-ios --scheme VibbidDev --mode DevelopmentDebug --simulator iPhone 15",
+    "ios:pro": "react-native run-ios --scheme Vibbid --mode ProductionDebug --simulator iPhone 15",
+    "android:dev": "react-native run-android --mode developmentdebug",
+    "android:pro": "react-native run-android --mode productiondebug",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -16,6 +20,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1"
